--- a/.github/workflows/zig-build.yml
+++ b/.github/workflows/zig-build.yml
@@ -77,12 +77,12 @@ jobs:
           # Check cmake
           if [ -f "/mingw64/bin/cmake.exe" ]; then
             echo "cmake found at: /mingw64/bin/cmake.exe"
-            /mingw64/bin/cmake.exe --version | head -1
             CMAKE_FOUND=true
+            /mingw64/bin/cmake.exe --version | head -1 || echo "Warning: Could not get cmake version"
           elif command -v cmake >/dev/null 2>&1; then
             echo "cmake found in PATH: $(command -v cmake)"
-            cmake --version | head -1
             CMAKE_FOUND=true
+            cmake --version | head -1 || echo "Warning: Could not get cmake version"
           else
             echo "ERROR: cmake not found"
             CMAKE_FOUND=false
@@ -91,12 +91,12 @@ jobs:
           # Check ninja
           if [ -f "/mingw64/bin/ninja.exe" ]; then
             echo "ninja found at: /mingw64/bin/ninja.exe"
-            /mingw64/bin/ninja.exe --version
             NINJA_FOUND=true
+            /mingw64/bin/ninja.exe --version || echo "Warning: Could not get ninja version"
           elif command -v ninja >/dev/null 2>&1; then
             echo "ninja found in PATH: $(command -v ninja)"
-            ninja --version
             NINJA_FOUND=true
+            ninja --version || echo "Warning: Could not get ninja version"
           else
             echo "ERROR: ninja not found"
             NINJA_FOUND=false
@@ -105,11 +105,15 @@ jobs:
           # Check gcc
           if [ -f "/mingw64/bin/gcc.exe" ]; then
             echo "gcc found at: /mingw64/bin/gcc.exe"
-            /mingw64/bin/gcc.exe --version | head -1
+            GCC_FOUND=true
+            /mingw64/bin/gcc.exe --version | head -1 || echo "Warning: Could not get gcc version"
           elif command -v gcc >/dev/null 2>&1; then
             echo "gcc found in PATH: $(command -v gcc)"
+            GCC_FOUND=true
+            gcc --version | head -1 || echo "Warning: Could not get gcc version"
           else
             echo "ERROR: gcc not found"
+            GCC_FOUND=false
           fi
           
           # Check curl
@@ -127,6 +131,8 @@ jobs:
             ls -la /mingw64/bin/ | grep -E "(cmake|ninja)" || echo "No cmake/ninja found"
             exit 1
           fi
+          
+          echo "All critical build tools found."
 
       - name: Download and extract Zig source
         shell: D:/git-sdk-64-makepkg-git/usr/bin/bash.EXE --noprofile --norc -e -o pipefail {0}
