fix: Correct GitHub Action syntax for Git for Windows SDK setup

--- a/.github/workflows/zig-build.yml
+++ b/.github/workflows/zig-build.yml
@@ -22,7 +22,7 @@ jobs:
 
     steps:
       - name: Setup Git for Windows SDK
-        uses: git-for-windows/setup-git-for-windows-sdk
+        uses: git-for-windows/setup-git-for-windows-sdk@v1
         with:
           flavor: full
           architecture: x86_64
