fix: Handle missing cache directories gracefully
- Add directory existence checks before file counting
- Create missing pacman package cache directory
- Provide informative messages for missing directories
- Prevent 'No such file or directory' errors in cache step

--- a/.github/workflows/zig-build.yml
+++ b/.github/workflows/zig-build.yml
@@ -60,6 +60,7 @@ jobs:
             mingw64-deps-${{ runner.os }}-
       
       - name: Make scripts executable
+        shell: bash
         run: | 
           if [ -d ".github/scripts" ]; then
             chmod +x .github/scripts/*.sh
@@ -80,11 +81,39 @@ jobs:
         shell: bash --noprofile --norc -e -o pipefail {0}
         run: |
           echo "Cache paths prepared for saving"
-          ls -la /mingw64/bin | wc -l
-          ls -la /var/cache/pacman/pkg | wc -l     
+          
+          # Check if directories exist before counting files
+          if [ -d "/mingw64/bin" ]; then
+            echo "Mingw64 bin file count: $(ls -la /mingw64/bin | wc -l)"
+          else
+            echo "Mingw64 bin directory not found"
+          fi
+          
+          if [ -d "/var/cache/pacman/pkg" ]; then
+            echo "Pacman package cache count: $(ls -la /var/cache/pacman/pkg | wc -l)"
+          else
+            echo "Pacman package cache directory not found (normal for first run)"
+            # Create the directory so cache can save it
+            sudo mkdir -p /var/cache/pacman/pkg
+            sudo chmod 777 /var/cache/pacman/pkg
+          fi
+          
+          if [ -d "/mingw64/lib" ]; then
+            echo "Mingw64 lib file count: $(ls -la /mingw64/lib | wc -l)"
+          else
+            echo "Mingw64 lib directory not found"
+          fi
+          
+          if [ -d "/mingw64/include" ]; then
+            echo "Mingw64 include file count: $(ls -la /mingw64/include | wc -l)"
+          else
+            echo "Mingw64 include directory not found"
+          fi
           
           # Force PATH refresh and hash table reset
           hash -r
+          
+          echo "Cache directories are ready for next run"
           
       - name: Verify build tools
         shell: bash
